<resources>
    <string name="app_name">FacePay</string>
    <string-array name="dealers">
        <item>State Bank of India</item>
        <item>Yes Bank</item>
        <item>Indian Bank</item>
        <item>HDFC</item>
        <item>Canara Bank</item>
    </string-array>

    <string name="login">Login to your account</string>
    <string name="email">Email</string>
    <string name="email_hint">Enter your email address</string>
    <string name="psw">Password</string>
    <string name="psw_hint">Enter your password</string>
    <string name="submit">Submit</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>

    <string name="register">Register with your details</string>
    <string name="face_img">Face image</string>
    <string name="already_have_an_account">Already have an account?</string>

    <string name="amount_to_add">Amount to add</string>
    <string name="add_amount">Add Amount to your account</string>
    <string name="amount">Enter the amount</string>

</resources>
