<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/back1"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textColor="#000"
        android:textSize="21sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginTop="50dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textColor="#000"
        android:textSize="21sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="285dp"
        android:layout_height="39dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/rectangle"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:padding="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/psw"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textColor="#000"
        android:textSize="21sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/et_psw"
        android:layout_width="285dp"
        android:layout_height="39dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/rectangle"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/psw_hint"
        android:inputType="textPassword"
        android:padding="10dp"/>

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textColor="#fff"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/design1"/>

    <TextView
        android:id="@+id/moveToRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="15dp"
        android:text="@string/already_have_an_account"
        android:textStyle="bold"
        android:textSize="15sp"/>

</LinearLayout>