<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/back1"
    tools:context=".AddAmount">

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="50dp"
    android:text="@string/email"
    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
    android:textColor="#000"
    android:textSize="21sp"
    android:textStyle="bold" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="285dp"
        android:layout_height="39dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/rectangle"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:padding="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/amount_to_add"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000"
        android:textSize="21sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_amount"
        android:layout_width="285dp"
        android:layout_height="39dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/rectangle"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/amount"
        android:inputType="number"
        android:padding="10dp"/>

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textColor="#fff"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/design1"/>


</LinearLayout>